[dependencies.gdbstub]
default-features = false
version = "0.6"

[dependencies.num-traits]
default-features = false
version = "0.2"

[package]
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
categories = ["development-tools::debugging", "embedded", "emulators", "no-std"]
description = "Implementations of `gdbstub::arch::Arch` for various architectures."
documentation = "https://docs.rs/gdbstub_arch"
edition = "2018"
homepage = "https://github.com/daniel5151/gdbstub"
keywords = ["gdb", "emulation", "no_std", "debugging"]
license = "MIT OR Apache-2.0"
name = "gdbstub_arch"
readme = "README.md"
repository = "https://github.com/daniel5151/gdbstub"
version = "0.2.3"
